# kumestra.github.io

./: README.md  config.ini  config.yml  hugo.toml  package.json  pyproject.toml  test.ipynb
.github/workflows/: deploy.yml
_posts/: 2024-05-09-post-login-shell-and-non-login-shell.md
content/posts/: hugo-setup.md  langchain.md  my-first-post.md  prompt_engineering.md  test_article.md
content/posts/Web3/: index.md
content/posts/chatgpt/: index.md
content/posts/computer-network/: index.md
content/posts/k8s/: index.md
content/posts/test-article/: index.md
content/posts/toolkit/: index.md
content/posts/transformer/: index.md
public/: 404.html  index.html  index.xml  sitemap.xml
public/ananke/css/: main.css.map
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/hugo-setup/: index.html
public/posts/hugo_setup/: index.html
public/posts/langchain/: index.html
public/posts/my-first-post/: index.html
public/posts/page/1/: index.html
public/tags/: index.html  index.xml
src/: config.ts
src/data/blog/: claude-code-config-sync-design.md  openai-codex-agent-ecosystem.md  understanding-frontmatter-fields.md
src/data/blog/202604/: 0407-claude-code-source-code-analysis.md  0413-pyproject-toml-guide.md  0414-async-python-threads-llm-textual.md  0414-logging-claude-code-codex-opencode.md  0415-mcp-model-context-protocol-explained.md  0415-python-project-folder-structure.md  0415-sqlite-gui-tools.md  0416-git-filter-repo-explained.md  0416-gitkeep-log-folder-pattern.md  (+12 more)
src/layouts/: PostDetails.astro
(+240 files in other folders)
